@@ -1,14 +1,13 @@
 package com.example.car_rental_sys.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.example.car_rental_sys.dto.RentalDTO;
 import com.example.car_rental_sys.entity.Car;
 import com.example.car_rental_sys.entity.Rental;
-import com.example.car_rental_sys.exception.RentalException;
+import com.example.car_rental_sys.exception.CarRentalException;
 import com.example.car_rental_sys.repository.CarRepository;
 import com.example.car_rental_sys.repository.RentalRepository;
 
@@ -25,7 +24,7 @@ public class RentalService {
 
 	public RentalDTO createRental(RentalDTO rentalDTO) {
 		Car car = carRepository.findById(rentalDTO.getCarId())
-				.orElseThrow(() -> new RentalException(rentalDTO.getCarId()));
+				.orElseThrow(() -> new CarRentalException(rentalDTO.getCarId()));
 
 		Rental rental = rentalDTO.toEntity(car);
 		Rental saved = rentalRepository.save(rental);
@@ -33,14 +32,14 @@ public class RentalService {
 	}
 
 	public List<RentalDTO> getAllRentals() {
-		return rentalRepository.findAll().stream().map(RentalDTO::fromEntity).collect(Collectors.toList());
+		return rentalRepository.findAll().stream().map(RentalDTO::fromEntity).toList();
 	}
 
 	public RentalDTO updateRental(Long id, RentalDTO rentalDTO) {
-		Rental existingRental = rentalRepository.findById(id).orElseThrow(() -> new RentalException("Rental", id));
+		Rental existingRental = rentalRepository.findById(id).orElseThrow(() -> new CarRentalException("Rental", id));
 
 		Car car = carRepository.findById(rentalDTO.getCarId())
-				.orElseThrow(() -> new RentalException(rentalDTO.getCarId()));
+				.orElseThrow(() -> new CarRentalException(rentalDTO.getCarId()));
 
 		existingRental.setRenterName(rentalDTO.getRenterName());
 		existingRental.setStartDate(rentalDTO.getStartDate());
@@ -54,7 +53,7 @@ public class RentalService {
 
 	public void deleteRental(Long id) {
 		if (!rentalRepository.existsById(id)) {
-			throw new RentalException("Rental", id);
+			throw new CarRentalException("Rental", id);
 		}
 		rentalRepository.deleteById(id);
 	}
